force-app/main/default/objects/Supplier_Bid__c/Supplier_Bid__c.object-meta.xml
<CustomObject>
    <label>Supplier Bid</label>
    <pluralLabel>Supplier Bids</pluralLabel>
    <description>A bid submitted by a supplier in response to a sourcing request's RFP. Holds the supplier's per-criterion scores (price, quality, sustainability, service level), the unit price offered, the weighted total the evaluation flow computes, and whether it is the leading bid. One sourcing request has many supplier bids.</description>
    <nameField>
        <label>Bid Number</label>
        <type>AutoNumber</type>
        <displayFormat>BID-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>