force-app/main/default/objects/Supplier_Bid__c/fields/Is_Leading_Bid__c.field-meta.xml
<CustomField>
    <fullName>Is_Leading_Bid__c</fullName>
    <label>Is Leading Bid</label>
    <description>Set by the Evaluate Bids flow on the single highest-scoring bid that also clears the qualifying threshold. All other bids are cleared.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>