force-app/main/default/objects/Supplier_Bid__c/fields/Price_Score__c.field-meta.xml
<CustomField>
    <fullName>Price_Score__c</fullName>
    <label>Price Score</label>
    <description>Buyer's assessment of this bid on price competitiveness, 0-100.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>