force-app/main/default/objects/Supplier_Bid__c/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <label>Quality Score</label>
    <description>Buyer's assessment of this bid on product/service quality, 0-100.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>