force-app/main/default/objects/Supplier_Bid__c/fields/Service_Level_Score__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Score__c</fullName>
    <label>Service Level Score</label>
    <description>Buyer's assessment of this bid on service level / reliability, 0-100.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>