force-app/main/default/objects/Supplier_Bid__c/fields/Sourcing_Request__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Request__c</fullName>
    <label>Sourcing Request</label>
    <description>The sourcing request (RFP) this bid was submitted against.</description>
    <type>MasterDetail</type>
    <referenceTo>Sourcing_Request__c</referenceTo>
    <relationshipName>Supplier_Bids</relationshipName>
    <relationshipLabel>Supplier Bids</relationshipLabel>
</CustomField>