force-app/main/default/objects/Supplier_Bid__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <description>The supplier that submitted this bid.</description>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
</CustomField>