force-app/main/default/objects/Supplier_Bid__c/fields/Sustainability_Score__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Score__c</fullName>
    <label>Sustainability Score</label>
    <description>Buyer's assessment of this bid on sustainability / ESG criteria, 0-100.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>