force-app/main/default/objects/Supplier_Bid__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>Unit Price</label>
    <description>The unit price the supplier offered in this bid.</description>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>