force-app/main/default/objects/Supplier_Bid__c/fields/Weighted_Total__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Total__c</fullName>
    <label>Weighted Total</label>
    <description>Weighted evaluation score for this bid (0-100), computed by the Evaluate Bids flow from the four component scores and the sourcing request's configurable weights. Populated at evaluation time.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>